[gd_scene load_steps=20 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/S1/jiggle_default.material" type="Material" id=2]
[ext_resource path="res://Assets/01.jpg" type="Texture" id=3]
[ext_resource path="res://Scenes/S1/S00.gd" type="Script" id=4]
[ext_resource path="res://Scenes/SpringSimulation/BasePosition.gd" type="Script" id=5]
[ext_resource path="res://Scenes/SpringSimulation/SpringPoint.gd" type="Script" id=6]
[ext_resource path="res://Scenes/SpringSimulation/SpringSim.gd" type="Script" id=7]
[ext_resource path="res://Scenes/ui/arial_bolditalicmt.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/ui/Ui.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Audio/05.mp3" type="AudioStream" id=15]
[ext_resource path="res://Scenes/Audio/04.mp3" type="AudioStream" id=16]
[ext_resource path="res://Scenes/Audio/03.mp3" type="AudioStream" id=17]
[ext_resource path="res://Scenes/Audio/02.mp3" type="AudioStream" id=18]
[ext_resource path="res://Scenes/Audio/01.mp3" type="AudioStream" id=19]
[ext_resource path="res://Scenes/reklama/rekl.png" type="Texture" id=20]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 3 )

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="PlaneMesh" id=1]
subdivide_width = 64
subdivide_depth = 64

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 8 )

[node name="Jiggle" type="Spatial"]
script = ExtResource( 4 )

[node name="SpringSim" type="Node2D" parent="."]
visible = false
script = ExtResource( 7 )
damping = 0.05
speed = 6.0
MAX_DISTANCE = 60.0

[node name="Camera2D" type="Camera2D" parent="SpringSim"]
position = Vector2( 464, 242 )
current = true
zoom = Vector2( 2, 2 )

[node name="BasePosition" type="Sprite" parent="SpringSim"]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="SpringPoint" type="Sprite" parent="SpringSim"]
position = Vector2( 240, 192 )
texture = ExtResource( 1 )
script = ExtResource( 6 )
base_position = NodePath("../BasePosition")

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.80527, 0 )
projection = 1
current = true
size = 2.365

[node name="Body" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.486 )

[node name="Chest" type="MeshInstance" parent="Body"]
transform = Transform( 0.685032, 0, 0, 0, 1, 0, 0, 0, 1.18432, -0.011074, -0.453668, 0.490134 )
material_override = SubResource( 2 )
mesh = SubResource( 3 )

[node name="Breasts" type="MeshInstance" parent="Body"]
transform = Transform( 0.478628, 0, 0, 0, 1.19594, 0, 0, 0, 0.563854, -0.0261692, -0.425285, 0.893922 )
material_override = ExtResource( 2 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="Audio" type="Node2D" parent="."]
position = Vector2( 485, 710 )

[node name="Play1" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 19 )
autoplay = true

[node name="Play2" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 17 )

[node name="Play3" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 18 )

[node name="Play4" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 15 )

[node name="Play5" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2( -3, -4 )
stream = ExtResource( 16 )

[node name="rekl" type="Node2D" parent="."]
visible = false
position = Vector2( -254, -1035 )
scale = Vector2( 2, 2 )

[node name="Sprite" type="Sprite" parent="rekl"]
position = Vector2( 352, 640 )
scale = Vector2( 1.08889, 1 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="rekl"]
margin_left = 163.0
margin_top = 590.0
margin_right = 571.0
margin_bottom = 647.0
custom_fonts/font = SubResource( 7 )
text = "Реклама через 3"

[node name="Timer" type="Timer" parent="rekl"]
one_shot = true

[node name="T" type="Timer" parent="rekl"]
wait_time = 180.0
one_shot = true

[node name="ui" parent="." instance=ExtResource( 9 )]

[connection signal="timeout" from="rekl/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="rekl/T" to="." method="_on_T_timeout"]
